--- a/manifest.json
+++ b/manifest.json
@@ -22,6 +22,7 @@
       "SupportedInMultiActions": false,
       "VisibleInActionsList": true,
       "UUID": "com.axytradingtools.tile",
+      "Icon": "images/icon",
       "PropertyInspectorPath": "PropertyInspector/index.html"
     }
   ],
@@ -45,7 +46,7 @@
   "Name": "AxyTradingTools",
   "Icon": "images/icon",
   "URL": "https://axystudio.fr",
-  "Version": "1.0.0",
+  "Version": "1.2.2",
   "TimerInterval": 100,
   "Category": "ATT 2",
   "CategoryIcon": "Images/categoryIcon",
